--- a/src/Components/RightSection/rightSection.css
+++ b/src/Components/RightSection/rightSection.css
@@ -1,7 +1,7 @@
 .right-section{
-	padding:5px;
-	box-shadow: 1px 1px 1px #bbbbbb;
-	background: #dddddd;
+	padding:10px;
+	background: #f1f1f1;
+	box-shadow: 1px 1px 2px #cccccc;
 	overflow:hidden;
 	grid-column:7/9;
 }
