--- a/index.css
+++ b/index.css
@@ -10,9 +10,9 @@ body {
 
 .btn{
 	padding:15px 12px;
-	float:left;
+	/*float:left;*/
 	color:#f1f1f1;
-	margin: 8px 4px 0 0;
+	margin: 8px 4px 8px 0;
 	border-radius:4px;
 	border:none;
 	letter-spacing: 0.5px;
